clase2/mi-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mi-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
